# ChangeLog for app-admin/diradm
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-admin/diradm/ChangeLog,v 1.49 2014/08/10 01:37:40 patrick Exp $

  10 Aug 2014; Patrick Lauer <patrick@gentoo.org> diradm-2.9.3.ebuild,
  diradm-2.9.5.ebuild, diradm-2.9.6.ebuild, diradm-2.9.7.1.ebuild,
  diradm-2.9.7.ebuild:
  Fix description for more repoman happy

  27 Mar 2013; Agostino Sarubbo <ago@gentoo.org> diradm-2.9.7.1.ebuild:
  Stable for ppc64, wrt bug #456418

  26 Mar 2013; Agostino Sarubbo <ago@gentoo.org> diradm-2.9.7.1.ebuild:
  Stable for ppc, wrt bug #456418

  25 Mar 2013; Agostino Sarubbo <ago@gentoo.org> diradm-2.9.7.1.ebuild:
  Stable for x86, wrt bug #456418

  25 Mar 2013; Agostino Sarubbo <ago@gentoo.org> diradm-2.9.7.1.ebuild:
  Stable for amd64, wrt bug #456418

  21 Nov 2012; Agostino Sarubbo <ago@gentoo.org> diradm-2.9.7.ebuild:
  Stable for x86, wrt bug #442382

  15 Nov 2012; Anthony G. Basile <blueness@gentoo.org> diradm-2.9.7.ebuild:
  stable ppc ppc64, bug #442382

  10 Nov 2012; <ago@gentoo.org> diradm-2.9.7.ebuild:
  Stable for amd64, wrt bug #442382

*diradm-2.9.7.1 (09 Nov 2012)

  09 Nov 2012; Robin H. Johnson <robbat2@gentoo.org> +diradm-2.9.7.1.ebuild:
  Minor bump to hide some stderr output in certain configurations, as found by
  Denis M. (Phr33d0m) <god@politeia.in>.

  09 Nov 2012; Robin H. Johnson <robbat2@gentoo.org> diradm-2.9.7.ebuild:
  EAPI2 doins die.

*diradm-2.9.7 (08 Nov 2012)

  08 Nov 2012; Robin H. Johnson <robbat2@gentoo.org> +diradm-2.9.7.ebuild:
  Version bump, contains a single fix, for bug #254698, plus cleanups of the
  leftover CVS->Git migration of 2008. Stable candidate.

  11 Oct 2009; Mark Loeser <halcy0n@gentoo.org> diradm-2.9.3.ebuild,
  diradm-2.9.5.ebuild, diradm-2.9.6.ebuild:
  QA fixes; test? in RDEPEND

  09 Mar 2009; Petteri Räty <betelgeuse@gentoo.org> diradm-2.9.3.ebuild,
  diradm-2.9.6.ebuild:
  Migrate to EAPI 2.
