@@ -1,12 +1,10 @@
-DIST diradm-2.9.3.tar.bz2 105362 SHA256 4bd8261c11916caab989b596c78f648510225de4d52af3c9a425ef92bf6a096d SHA512 369d6d912f3b1f7c06427ab570325c8783d80c74fd7097c3f22cf5f14259c5c95558f30a9f479624213b8f9b920b2275b3ed1010e743aad8671e504d94ebbf70 WHIRLPOOL 54836bd9ff7d325768cd3efed1cf7b1dc261af27f2eb542e9bdc1d8c2526ce7ac6fee195647bc8e0ecdf4e69f1d3ac49f54e41520dba5ce7a94f2ead39f5bd6b
 DIST diradm-2.9.5.tar.bz2 113429 SHA256 8d189981d0fbd63bd55114f7b1c34f97f39a832fa5093f63be3c403ba4da87e4 SHA512 95342ece8ee79bf846ead7a0b5af0954ebded47663c0325476599252269e1f7dbc72437b69a777d2e02382d9c824838592eee1d916da6199f8982b4df7833158 WHIRLPOOL 91f33d6007a119269ac6ba5c7881a2cdc3fc77076824b7c23c7eab2c4403c605a2d1455b0f705a7db6d9b8a2277470ab73c9af10b57a94b7b0bede939298000b
 DIST diradm-2.9.6.tar.bz2 113599 SHA256 8c316d05a8d5faf73fc9608bb3bfd1c610148c0132f7db80f92423c40ce08256 SHA512 4a6a976cedda306e4eec2478e1fd61a00f67c93b23ca86c701cd10bc32d73ce52a3d0ade97f04f0f2d0cd0dba292e3110ccad35d68a6b34ef9b651412b1a5768 WHIRLPOOL e7d55bbb30e0379d24b5172bc9f156b6d9e8ce4cd42e62116be763b01e00db29b0efd39d6e6192dcf8039ef6acb3fc7e3e713a05128ffc1d819ec21a79a3af94
 DIST diradm-2.9.7.1.tar.bz2 126172 SHA256 0a10f8b8b872a1f985c1f73da0109e8ba5ebde09ccb4760b56e67d4a1b88f2bf SHA512 5052f7b7072cd61eb9c70d23057f6c0d2fa68a151792d7260ca52716c9588c06234d335af84b967df23da4b4a8650502cab3b18900dc15e71f71b0888224993f WHIRLPOOL 31c2b6eaa913aa0a273652958233e0ace3b309063448add6b446a41e48903b984810f0ce668b27efbbca8c558a20a379692a3d7d3997d8481d0dbfe19827adee
 DIST diradm-2.9.7.tar.bz2 126122 SHA256 de3833a8e6632e69245ff248022426e5ce33f14f63f09d8c102e84bb14e2fc5c SHA512 a7aba26d6eff8829b4e2e65e33d030c2373101c5dd526285ab5a79fef052c08e1886204a7d6d2591ebe0807f0f396d189f9e1263de06f37497aa8b76fcae6395 WHIRLPOOL 7f93087282cddd32e3ecd85a9da89dc629b3bd925a12eab40c69a37e7c522fcdbc8cb045be1deea3bcb405e1aaab0e64a0ee38dcdc45acb7944f9a7743989984
-EBUILD diradm-2.9.3.ebuild 1856 SHA256 4c7aaa96ea55151600c51dca49af643646964e1af121ad3027e6c617f4a37a50 SHA512 d32f8843537ab7cc028129462d48c20928953919bd137a8b05ef3bb0d7a0694f7f8f1a109093c512fbc47134335709296e418c5ed150e24edf49758c9efb8676 WHIRLPOOL b95b1500ecc74cf38eea67dd07352191b9ad98cd06728664ef87bf546bbe7629ed8a94039f9c993cf946d0aedcd854a9714641df73298f24d4a603961b04d767
 EBUILD diradm-2.9.5.ebuild 2070 SHA256 bf6cf4a4a704f859f24086fe99733a0a8ca403b88da93bf8942f8a65ea1a5536 SHA512 6d008148d590e1ff39837d1b0c048a516c20b2eb479be505b08fd1fe252e05a4ae5648bba537f9a2b6a9ec38ccc35ed9134710b01dc852781364a1492cfe6fd6 WHIRLPOOL 72aff93a48d62cad7f3cafa20870acaae71377ed9f9b15a7a336f297c46c50218df998daf597145778225d55289e48215cac9dd6e4fabcc47d18b1e58727d9b9
 EBUILD diradm-2.9.6.ebuild 1877 SHA256 9c1fdcba192037753912c889b27b33536b4355180d8a9cb5e88f9d3aa3578fd1 SHA512 a39bdf78b757250e1c6f8ac07613dc5fc3263c0ad8cb9de9e000b04d42e3d28295c8de887e340b52ba3e8879d20db3f57344db5aef5c541a48ea88585a5f56eb WHIRLPOOL d86802f79b05b034cf5e2ae6a1b32f804c14ff7a3ebe6aac3f9f7453b76406382f1fc6f41cab0e6df193333c2f07e4120035145bcf6b808b335a2c477ea8f9e7
 EBUILD diradm-2.9.7.1.ebuild 2183 SHA256 5c10a7b66c46769858d841d76f47b10b2db43f5b0e26ce6673927cb337a74250 SHA512 b320ed1e32740b648bf7054e32fd65aab226717c557657928dbf8480e4c3c8e0e715881682478f47055c583a629177c6fc2bd98ddc4d0a798f933db33c8c0261 WHIRLPOOL bf9eab5e61abba98980ba63fc26066c8b1361b7bb10be7dc06c4c3b5eb6c812e56fdd69c78ae4e6763707658a8ff96f85d8c56f5d77c3d2fa7c93be635d07160
 EBUILD diradm-2.9.7.ebuild 1909 SHA256 14422aa01ae94970cc93664f89ed8a47f36b7ff03edddec2807dc4ffaa25381f SHA512 a4beada0b9ff43fa0d4fd78d38ed7c35d1f61fe981d93ffef3bc612118733f152c91f89b800f5ad549bfd0817fa83f0d19863e339ddbe697e1a2ee6e9734b0cb WHIRLPOOL cce1b1c5a0205f65b21eea275a56fcef65a37030ac355782588f5fc741b53c80cb87e6ff7a6f9d7a730f7cbeb29f81375785f120a111b59b19a61408798143a3
-MISC ChangeLog 7319 SHA256 3645b64d592c1677688f0f5e99b4504f26343dcb1bdbcb45f7c6c06b8be36ff3 SHA512 2f671b3de1f3e7d4effa419a714ea27a12a652c6395f34704e289043ff2c2d796b4973146aedf234a82635bb5decd8f3ddf2ee38cfe2757085bc6a2238fea3c2 WHIRLPOOL a845d38ec6c73250cf1669e815160aaaecf2348bcea23c3de8e81b3e12909c5f3e989fef9e02cab6c016aac87ec32ee708537b9200afca834195cafc440aa1ec
+MISC ChangeLog 7406 SHA256 312e4c13374206779a6830cc95a3ff98b46a938189bb98daae5cc68f3ec9f1e5 SHA512 64ef7d5b15b1ce3840d8c77e6708078df4adf4d4542b674615fa26cd92c8096ad5869cb8c0b2ec3aab68fee562a6e87fb6a84423fe0bf000216f1b235407e191 WHIRLPOOL a491e787e7ec9d229701656f06b5812c07ee0d95358f2cc968734ad5cbbffc47b675f55c596369b3e950dd98e35ce427ee5c3c608a24972feba657c10f76ae01
 MISC metadata.xml 413 SHA256 c4f68195f9ade1c1127ca62be5cc7e969028dfa1662517e6b41a0781f01aa3e4 SHA512 69a020b77a79f6920e19f947d290eb81cf013a5849da6db40d90455ab4f11d32bcc654671da1b441369c6173e861d5c9684d0a88087e4a5ac083e77d011c9495 WHIRLPOOL ba5e4f86ccc4eca097103d185dafda171cb8372e2b7bb1ee5932bbe4b7cdb1f1ad3a3c702b4386832825a0f731c71ebcc1699935078e4e3e9e9369c65533633c
