@@ -1,13 +1,0 @@
-DEFINED_PHASES=configure install postinst setup test
-DEPEND=net-nds/openldap sys-apps/gawk sys-apps/coreutils sys-apps/grep dev-lang/perl app-shells/bash sys-apps/sed virtual/perl-MIME-Base64 samba? ( dev-perl/Crypt-SmbHash >=net-fs/samba-3.0.6 ) test? ( dev-perl/Crypt-SmbHash >=net-fs/samba-3.0.6 dev-util/dejagnu net-nds/openldap[-minimal] )
-DESCRIPTION=diradm is a nearly complete nss/shadow suite for managing POSIX users/groups/data in LDAP
-EAPI=2
-HOMEPAGE=http://orbis-terrarum.net/~robbat2/
-IUSE=samba irixpasswd automount test
-KEYWORDS=amd64 ppc ppc64 x86
-LICENSE=GPL-2
-RDEPEND=net-nds/openldap sys-apps/gawk sys-apps/coreutils sys-apps/grep dev-lang/perl app-shells/bash sys-apps/sed virtual/perl-MIME-Base64 samba? ( dev-perl/Crypt-SmbHash >=net-fs/samba-3.0.6 )
-SLOT=0
-SRC_URI=http://orbis-terrarum.net/~robbat2/diradm-2.9.3.tar.bz2
-_eclasses_=eutils	998e5931fb95b10a6a11ec796ada2759	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	a3db8057ea0903a9ebea4e46aab28ff9
-_md5_=6d4c1f9490b38fa0ccb19476bd796d33
