@@ -1,11 +1,0 @@
-DEFINED_PHASES=compile install
-DEPEND=>=dev-lang/perl-5.6.1 dev-perl/perl-ldap dev-perl/URI virtual/perl-Digest-MD5 dev-perl/Authen-SASL
-DESCRIPTION=led is a general purpose LDAP editor
-HOMEPAGE=http://led.sourceforge.net/
-KEYWORDS=~x86 ~amd64 ~ppc
-LICENSE=BSD
-RDEPEND=>=dev-lang/perl-5.6.1 dev-perl/perl-ldap dev-perl/URI virtual/perl-Digest-MD5 dev-perl/Authen-SASL
-SLOT=0
-SRC_URI=mirror://sourceforge/led/led-1.79.4.tar.gz
-_eclasses_=eutils	998e5931fb95b10a6a11ec796ada2759	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	a3db8057ea0903a9ebea4e46aab28ff9
-_md5_=65bdac360004707cfaaea88253cc4e76
