@@ -1,0 +1,11 @@
+DEFINED_PHASES=compile install postinst postrm unpack
+DESCRIPTION=A Mozilla-based web browser whose design is inspired by GNU Emacs
+EAPI=5
+HOMEPAGE=http://conkeror.org/
+KEYWORDS=~amd64 ~x86 ~amd64-linux ~x86-linux
+LICENSE=|| ( MPL-1.1 GPL-2 LGPL-2.1 ) CC-BY-SA-3.0
+RDEPEND=|| ( >=www-client/firefox-5.0 >=www-client/firefox-bin-23.0 )
+SLOT=0
+SRC_URI=http://dev.gentoo.org/~ulm/distfiles/conkeror-1.0_pre20150227.tar.gz http://dev.gentoo.org/~ulm/distfiles/conkeror.png
+_eclasses_=eutils	998e5931fb95b10a6a11ec796ada2759	fdo-mime	0acfe1a88fd8751a1d5dc671168219fa	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	a3db8057ea0903a9ebea4e46aab28ff9
+_md5_=d63bc76cc88cb1a4e80483de2ea1c916
