@@ -1,6 +1,4 @@
-DIST led-1.111.tar.gz 30636 RMD160 ddc5f24b0fc09e5ff39a8f7ac10b522471094844 SHA1 9964b9bed34a660004ef46eb0bfa883b05a36878 SHA256 95a8fabd2e77a047304a6a854723016ccdb34e677a9f6859b937533d6f158109
-DIST led-1.79.4.tar.gz 280392 RMD160 c8bd18bbbb681d5135571ca8c7863083a562085f SHA1 a56e45afe74c8309c6410f278b6c3f3cd2138a4d SHA256 ee30ad020dfa89f4a50c66b2ce9b6a788fa809cda4ac70437a574b446e8b89bd
-EBUILD led-1.111.ebuild 772 RMD160 3963a0be5b17d6a1a784e14afcb7e287d228e022 SHA1 d6f3a1db304bb67e7eceda277bc00af300cc43bd SHA256 d732c187ee19fea228a9348c74072119408b59cbcfe425bab7ba6f243c648009
-EBUILD led-1.79.4.ebuild 862 RMD160 0f5dadf1a4d66ac91b4d167a35c8e9d2c6d563ee SHA1 b90dac015870c468459f3cc350a2c42bc605521c SHA256 b8387e2c8e560908dfc17d7fa689eb3619ec9c1c3088e129a2fb43dedd305d78
-MISC ChangeLog 1057 RMD160 2e78425ad52d37cc87d2fde44ec549b60aaaaa60 SHA1 462fd27767c98dc40e65e749f0a2cf10cb664fd9 SHA256 cb75e09a1827841d87e3bb5949f3401d66201c66f4eb069e22d55849e96b937d
-MISC metadata.xml 254 RMD160 49b37e744e52a61e903c4d2d0c9d8a4872009269 SHA1 03af5edfbf792ed5819c3a185ebfd1dc84032533 SHA256 01e5e65407b8647d4a3ba7fc968e271368b319b1b34a2df8fa891c70099a3e63
+DIST led-1.111.tar.gz 30636 SHA256 95a8fabd2e77a047304a6a854723016ccdb34e677a9f6859b937533d6f158109 SHA512 e5078cbed72e406846f50be13fa2e475549b5e0f22eee8da19fca1bb097bc155ee38d289f3f1f89e47d4efae6d9d67eda8bec8a2dd9b90f52020dcd6ea2945e5 WHIRLPOOL b2398a7f72657c21bef65ef14a52e0469dfe7d4c5337c400346e16f853bb0e256ad540f3a8ad2b09e22c6be7e79f741ee106fc65396b2f24e5427d27ddf2e3fc
+EBUILD led-1.111.ebuild 772 SHA256 d732c187ee19fea228a9348c74072119408b59cbcfe425bab7ba6f243c648009 SHA512 094bbbb1f3f2a4adc1e82ff5175a041930668ca11f79f2fb4f38f1e845d9391fff160f5275234000993c9686af55f995c9c90b3f45ea0ada7c4a7060293cd51b WHIRLPOOL eb68fc088642ea6c2e597148bf2c910c9f5e6d03889834dfe5486b0e5a648142691b554b7395781a959624bb7131478f3f42dfc9b76a19d0d4d533ab6a1f6f32
+MISC ChangeLog 1141 SHA256 64a35c36e92f469e826141deb170f874eed5d673db72220668583962156920bb SHA512 f703822bb18405fdb354c60f210070a6692ec902b4a68ee0fc42140c7ea4f06cd44652d7c3a16410aad9d31a2f5d0faeb273a3f24768853a05c8f8fbb1e6a389 WHIRLPOOL 3a07401639b1fac5ae104231b2dc171aa49a6190a06e5007314d40b0dcb02d9fdf70751a450bc9cc53a90a16a43f80f7fac4bf98f3571294a6ff591c501a2231
+MISC metadata.xml 254 SHA256 01e5e65407b8647d4a3ba7fc968e271368b319b1b34a2df8fa891c70099a3e63 SHA512 1e5e169b9f7bbc60a3b0e19a0f21d108b6d5cdea4ab299817c8d157370f8a6a876c901aa94e4c8ef817f91fe53fe4cf029d72931d5fdb15b91b8119dc3d78e55 WHIRLPOOL acd26f78ca257d987fda8fbec98f3a9df754b8470d36fcf137b219760e9cfb5b95656fa104847c8e3cdb5b1f284ad97f3d6924ef8343c763e83f942abbeb9f23
