@@ -5,22 +5,24 @@ AUX conkeror-r2.sh 342 SHA256 a132620b63fc4183c21071493f16e089a40d542a6a70ad0e4a
 AUX conkeror.desktop 353 SHA256 dae4a96195bac52b9aee261c8ff82058990cefed2506fb42d222eb30a6c1d8e5 SHA512 ea48c755c800d2df417d5461e07a41305545de4086e22bf741804c60bb6d7f002685481eb505593c02f5948887026f5b9f15f853794c0c85c9aba7c060cf0f64 WHIRLPOOL 03697e3ab72862f56a2ff0867cc271bcb62d1cf89831c43d73d0d5ffa6a6989628fc02697d9be5cfe2c3c0436b297c283063687b5aba2fa4cf87b1e441aa3818
 DIST conkeror-1.0_pre20140212.tar.gz 310931 SHA256 ecc434ed3c7703fe78c3413402ebb8b0ad7453d3ac65345a5ece329f615b0d32 SHA512 08174a50b5aca69a76ee1686c460cd62bc51d75030c067202be5acb947e6ebfb209adf5797be0096256eef913e688c401cdccd5afa1e738390458b244378c41e WHIRLPOOL 25c6eeb676d3e4238d27884b13bc298dd263811bbc19df3afbf833c5359283bb40a15e63725dbc2d7f9b990963fde4c1e070c1f44a06132b99ca2d6d951bb0cb
 DIST conkeror-1.0_pre20141005.tar.gz 313907 SHA256 46bd153cd98381ab2f073af984a00aa0b2b612b587136b092efa3909e2bb5f28 SHA512 229c21e3001dd54a7e5c23db0458052c2c559ee45e851fff1d7db61b1fd7893d7c0ec53159b333a7908c356f025a8e9e01f9ef608cffd7b3dd0c01c07eac754d WHIRLPOOL 20d6198441c1ca03419ada61611f08711ffcd6cfc13f39c7bda889396643713bfc31937aa85ca60399b6dadc944e13fc7c662fce68b7fd6507dec93b536dad88
+DIST conkeror-1.0_pre20150227.tar.gz 314449 SHA256 b0da5b9215d730fe997156cdbd010fe8a738fd5c9bbe8facf7e33e2abd3229da SHA512 01f10f1b2c26b7f6a1cd6871c103d977e9df5a57a447e778e55491e420183f1c6522792515e4e6ea05f3bf9db4612af4fa67c4c07152aa71f8704fda9c595485 WHIRLPOOL a11e56eba16f8ac40e0d0f598f87169445513d2309fb1125cafc8e37ca3b4111c0f4fb532a331a57e6d071c6126efc6e69ff228f2af766e57984c73508b0b523
 DIST conkeror.png 5105 SHA256 b11856c32bdec9e9b045df44aa37727f6a3ec18507d376bf27675bc7ee042667 SHA512 fd44e2732a74ab6a54ef4a946f20619aa74d24d2244b0d6bedfa6d4680bc3247d297565550d8c3a5cc4a8ca608761ccb8f61e71cbe0c2851d400f8fa426e034f WHIRLPOOL 3fe3ea1f7f1caaa737ed3777b6b8cb6e10f971b5853a0a89de65c78e75323e8f01f01ea46d01fbff47dd97452e7a114b353322b4d8764a4d2bacf755c8fa3c66
 EBUILD conkeror-1.0_pre20140212.ebuild 1624 SHA256 4533b5161bcd2266789aef997e45857297e9f27b1b221c5d1eedb6419e3b8409 SHA512 98f588dc36ce5195fc8c82766ee24322f9fa31226d684e25a9ddd4d4230a7dc59216989c6ead5f3d157cf71f3f978dc10a8254e80f0eb32010502ea081dcf3c3 WHIRLPOOL b83dd04ff99d144d103d3074630602a41b712d1826855f4c9ba2a45eec16266705a12a8a1639430829c332442102bf7ebaf10bd4a7bec0168c0929f892885901
 EBUILD conkeror-1.0_pre20141005.ebuild 1619 SHA256 9d83e7e9dd932540c652a3ebe5e93cdfcb44e27ecb1439fb5f5940facc938d7e SHA512 89979bf837f1c58c149159c05805c6889e7f59b4849cfa0290f22e273a0bf4ba97af3de30facb8d3e87d9cc1e96376cb27f6be1e123e8b2bb06143005362d8fc WHIRLPOOL baa89a59b1291fae8bc82deee6410cef38fbad8a5996b217f989d20f4cb773f358fdf0f7da25b56b5b92123e48c3fdab7d9ece8d5007bbfcfc290addd06abff8
-MISC ChangeLog 6858 SHA256 0a8fcf05c2c9ffda08c368cd61f818e9f17c06f26e96cc4c17ec18979b3400ab SHA512 09918c8ce51cca8c56576fb337c293bad7430c761082e2a53c293143e48a445d34d0e5658abeee7bd640ab48a402edf0797aaa8c0abbdfc0c044fe7085f6edc6 WHIRLPOOL 9aab505ff31b5f58649df5f42ca8ac31a008af20a93bcb4eb39bf87b5805cfc95dd73a25cb2e550f054456a7a3aabe79b48089cd67bb75482fb874b473a03669
+EBUILD conkeror-1.0_pre20150227.ebuild 1619 SHA256 d69fe17a53e0b472173b9ac7f6a7ae3b5dde55216259bed1ecdb4dac9d68a0e0 SHA512 7260421d1effe00ddb0d2ef3e9092a52c3f17ee79e4f1d7e65109b2fec7656c4b437fc6080de0388f769f58e6ead94596d9f7424795a0cb3002332ded2bc783b WHIRLPOOL b1925ca5198eaf37f2860cb1501c1641e832c8a0783cdfec8bebe27b7d5f27afd7b4ceb1362565665cbec9a89bf9437d0e285d6ac7dbff4eb8834c8f16f1d55b
+MISC ChangeLog 6999 SHA256 ee6f44de3cbd88ec35d2d271d9b59682c80067c533427131e6ae19c3e9636cf9 SHA512 e5af64e82c01436b9beccf50b8479e4a5e789048fb3209f6b85390059d240c19a45eff8e9c950e84d33a15a7982f656524a0ce3dcbb54f25ff12ffb979c65638 WHIRLPOOL 4ecb84d7a010b5c740647f4a48582a1f643482ebbc0ff29fd25605ecc57bb5aa7e0a8dd518b4010f2604bd1cbea14f05b774d2926fb2ac5a535850de66fb6dcb
 MISC metadata.xml 785 SHA256 a0ee8ff9435e8fa585668a635233f4390f2db687e92a687d57e263a0b26db309 SHA512 bb9e6dcd8566bfcbfb37b70f7589052f768440661bf08de92dd116577ac801d9a1c4cecd918c0e3f691ef73dc015ed71a62fdd3e09945057bc249a85ef9456be WHIRLPOOL 96059be3f8f61b6de21e6e6c8b87e34413fa2d5a42dc8e34340b25ea6e13b15a7e32d622144dd4dc6fb5fb5fd21e3401784aac6128151ed818ae0ee76eb2532d
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQGcBAEBCAAGBQJUORgWAAoJEJQzkH1pP7W4NEQL/1/ofYBBeLknKx1jH5Rc5r9U
-HF0ECtCBfzygkJ4SxSdXOefaQHEFgc29OxHS4Izg/olqWVEFGY7QF9fs5pKIaQ5l
-Dkzm3bCwbr9RgH7kKHv3hQrVulM/J0s3vsYeU4P6PhtwIJ3VE7F0UVqkQk5pkHKI
-KMGJgS/NUgK3RPf1RQWTpIq3kTDO6eiPHK1/cVrv35rpcjbUmrHp9/CbekOO7e0F
-3Nxa9sNmoekqjrwe4tsZ/F9xhaiSuZY2a/vE5FZxa6dWS+wAiOBIKT/QqjnwRXIs
-JXFQNpTcfiuj4xy+7oj/eoofE6JdObw73J99Xk8V4CLeNZ2bceEUL/c4G2lxE5uu
-3jdipmKhtQ/5RNGpWm27K3ZAh0HppGzrFDBHl3SkPjW/we40mpTyegRI5KiX+6oK
-RWC7jVlVFzzo83h1riXhpl2FvKSU4kG/HZg2Ti6vsvnLb3uuUNhagm3UTTwSvU9D
-ciu+qMUnLOcNnpziv9YvaJwROOQpb6nqBfrhIC45+Q==
-=OWYy
+iQGcBAEBCAAGBQJU+58CAAoJEJQzkH1pP7W4kxwL/jcahtywiJdCfSRWxf/TBm5Q
+EuJKnBMuXkmnB9SAnx3d+oGPhnYU+6JvWPQOP9fvSEjp7B4/1DLaGx/5uy4mF/E8
+VtElh6pd0D7IpvA760mQt+6qbjQh/nOq6+DYrakaS128z+90OCKWcCsAKYiHFYNF
+nH4MnfjJ0ovxw3ehMJlUDErhyso5X/Qe/XA2hZA2MynyfIzQlN4de36Cv+usUm5g
+xYAzdB07Gxio73hS8cepndbfENdNkMOVoRlSJMp9jZUg4U0MjxVYV0SIsgMTI8U0
+1YI2NpW7sD9C9wNZRMD4zgo6spiHUS8m6PUh4FEEyz8Quv0FMp7Perfcr8bQbup4
+DT1HS/zZQ1TZjs6svWskxKLeqjGvM+XKg3pDYfqzycwxkyuc5MFmy2/BwtjKlrBC
+Qtvj+r3wJcdxhePWLksYNpe3eBSwsUbAyjSw6cw2PD3QT/hhj2/oWZa3ilhHAumA
+ZSiZa6LPOb7BVQrUfZPEggYhM6tyj5+7FkBVpSkUgg==
+=Uqrw
 -----END PGP SIGNATURE-----
