@@ -1,6 +1,9 @@
 # ChangeLog for net-nds/led
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-nds/led/ChangeLog,v 1.7 2011/11/07 03:52:54 robbat2 Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-nds/led/ChangeLog,v 1.8 2015/03/08 00:43:20 robbat2 Exp $
+
+  08 Mar 2015; Robin H. Johnson <robbat2@gentoo.org> -led-1.79.4.ebuild:
+  Cleanup.
 
 *led-1.111 (07 Nov 2011)
 
@@ -28,4 +31,3 @@
   +led-1.79.4.ebuild:
   New package, bug #71416. Based on submission by Gudleik Rasch
   <gudleik@rastamatra.org>.
-
